Renamed database as MPD_sql.db and removed old unused files
The deleted files are:
- Read_data.ipynb
- Read_data_random.ipynb
- matrix_factorization/matrix_factorization_old.ipynb
The first two loaded data from json files. They are no longer needed since we are using sql. Several functions in matrix_factorization_old also used json files, and are now obsolete.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Fundamentals of Music Processing.pdf
 /.project
 /.ipynb_checkpoints
 matrix_factorization/.ipynb_checkpoints
+matrix_factorization/temp
